# motore-2.5d

./: CMakeLists.txt  main.cpp
.prjct/: prjct.config.json
include/core/: AssetManager.hpp  LocalizationManager.hpp  WindowAdapter.hpp
include/ecs/: Entity.hpp
include/editor/: Editor.hpp
include/graphics/: Map.hpp  Raycaster.hpp
src/core/: WindowAdapter.cpp
src/editor/: Editor.cpp
src/graphics/: Map.cpp  Raycaster.cpp
